# one-for-all

./: .ofa.toml  Cargo.toml  README.md
defaults/: global.json
examples/: global.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: app.rs  config.rs  init.rs  main.rs  store.rs
src/config/: config.rs  mod.rs
src/context/: builtins.rs  context.rs  defaults.rs  mod.rs  persistent.rs  registry.rs  runtime.rs  store.rs
src/engine/: discovery.rs  executor.rs  interpolator.rs  lib.rs  mod.rs  provider.rs  resolver.rs  tokenizer.rs
src/lifecycle/: mod.rs
src/models/: command.rs  function.rs  mod.rs  provider.rs  value.rs  variable.rs
