[package]
name = "one-for-all"
version = "0.1.0"
edition = "2024"
description = "CLI based command macro and orchestration tool"
license = "MIT"

[[bin]]
name = "ofa"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
inquire = "0.7"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
